# project_momentum

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  code with lookback.ipynb  interactive_plots.ipynb  interactive_plots_script.py  momentum_notebook.ipynb  performance_stats.csv  pyproject.toml  requirements.txt
.ipynb_checkpoints/: momentum_notebook (1)-checkpoint.ipynb  momentum_notebook (2)-checkpoint.ipynb  momentum_notebook (3)-checkpoint.ipynb  momentum_notebook-Copy1-checkpoint.ipynb  momentum_notebook-Copy2-checkpoint.ipynb  momentum_notebook-checkpoint.ipynb
data/processed/: ETFPrices.csv  ETFPrices_processed.csv  Rf.csv  df_Rf_Monthly.csv  df_strategy_returns_by_lookback.csv  df_strategy_returns_by_lookback_wTC.csv
data/raw/: Rf.csv
reports/: momentum_report.tex  references.bib
reports/paper/: latex_pmp_template.tex  momentum_report.tex  references.bib
reports/presentation/: momentum_presentation.tex
src/: code with widgets.ipynb
